force-app/main/default/objects/Reference_Application_Language__c/fields/Reference_Application__c.field-meta.xml
<CustomField>
    <fullName>Reference_Application__c</fullName>
    <label>Reference Application</label>
    <referenceTo>Reference_Application__c</referenceTo>
    <relationshipLabel>Reference Application Languages</relationshipLabel>
    <relationshipName>Reference_Application_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>