force-app/main/default/objects/Reference_Application_Language__c/fields/Translated_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Translated_Created_Date__c</fullName>
    <label>Translated Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>