force-app/main/default/objects/Reference_Application_Language__c/fields/Translated_Save_Text__c.field-meta.xml
<CustomField>
    <fullName>Translated_Save_Text__c</fullName>
    <label>Translated Save Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>